Refactored all modules to delete redundant interfaces and public classes. Started with spring